# Multi-Turn-Conversational-Agent-with-Memory

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  agent.py  app.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  MEMORY.md
docs/eval/: report.md  results.csv
src/aria/: __init__.py  config.py  constants.py  exceptions.py  logging.py
src/aria/embeddings/: __init__.py  base.py  hashing.py  sentence_transformer.py
src/aria/eval/: __init__.py  ablation.py  benchmark.py  report.py  runner.py  scorer.py
src/aria/graph/: __init__.py  builder.py  checkpointer.py  cognitive.py  nodes.py  react.py  state.py
src/aria/memory/: __init__.py  consolidation.py  episodic.py  importance.py  manager.py  reflection.py  schema.py  semantic.py  store_sqlite.py  working.py
src/aria/models/: __init__.py  factory.py  fakes.py  resilience.py
src/aria/observability/: __init__.py  metrics.py  tokens.py
src/aria/rag/: __init__.py  chunker.py  index.py  loaders.py
src/aria/tools/: __init__.py  calculator.py  datetime_tool.py  registry.py  retrieve_documents.py  search_memory.py  web_search.py
src/aria/ui/: __init__.py  conversations.py  streamlit_app.py
src/aria/utils/: __init__.py  jsonparse.py  messages.py
src/aria/vectorstore/: __init__.py  base.py  faiss_store.py  numpy_store.py
tests/: conftest.py  test_agent.py  test_consolidation.py  test_embeddings.py  test_episodic.py  test_eval_offline.py  test_graph.py  test_importance.py  test_memory_manager.py  test_observability.py  test_rag.py  test_react_fallback.py  test_reflection.py  test_resilience.py  test_semantic.py  test_tools.py  test_ui.py  test_vectorstore.py  test_working.py
